# unix-compat

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  stack.yaml  unix-compat.cabal
.github/workflows/: ci.yml
System/PosixCompat/: Extensions.hsc  Files.hsc  Time.hs  Types.hs  User.hsc
cbits/: HsUname.c  HsUnixCompat.c  mktemp.c
include/: HsUnixCompat.h
src/System/: PosixCompat.hs
src/System/PosixCompat/: Extensions.hsc  Files.hsc  Temp.hs  Time.hs  Types.hs  Unistd.hs  User.hsc
src/System/PosixCompat/Internal/: Time.hs
test/: Tests.hs  run-tests.sh  unix-compat-testsuite.cabal
tests/: LinksSpec.hs  MkstempSpec.hs  check-types.hs  main.hs  mkstemp.hs
