Name: unix-compat
Version: 0.2
Cabal-version: >= 1.2.1
Build-type: Simple
License: BSD3
License-file: LICENSE
Maintainer: jacob@stanley.io
Synopsis: Portable POSIX-compatibility layer.
Description:
  This package provides portable implementations of parts
  of the unix package. This package re-exports the unix 
  package when available. When it isn't available,
  portable implementations are used.

Flag portable
  Default: False
  Description: Force compiling in portable mode, useful for testing.

Library
  Exposed-modules:
    System.PosixCompat.Extensions
    System.PosixCompat.Files
    System.PosixCompat.User
    System.PosixCompat.Time
    System.PosixCompat.Types
  Extensions: CPP
  GHC-Options: -Wall
  Build-depends: base == 4.*

  if flag(portable) || os(windows)
    Build-depends: old-time == 1.0.*, directory == 1.0.*
    Extensions: GeneralizedNewtypeDeriving
    if os(windows)
      cpp-options: -DMISSING_POSIX_TYPES
  else
    Build-depends: unix == 2.4.*
    Extensions: ForeignFunctionInterface
    CPP-options: -DUNIX_IMPL
    Include-dirs: include
    Includes: HsUnixCompat.h
    Install-includes: HsUnixCompat.h
    C-sources: cbits/HsUnixCompat.c
    if os(solaris)
      cc-options: -DSOLARIS

