name: unix-compat-testsuite
version: 0.1
build-type: Simple
cabal-version: >= 1.6

Executable testsuite
  main-is: Tests.hs
  
  build-depends:
    base == 4.*,
    unix == 2.4.*,
    unix-compat == 0.2.*

  build-depends:
    HUnit,
    test-framework,
    test-framework-hunit,
    test-framework-th

  -- The test suite must be run on POSIX
  -- so that portable functions can be
  -- compared to the real thing.
  if os(windows)
    buildable: False
